--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,6 +5,7 @@
   </head>
 
   <body>
-    <%- include("./partials/scripts") %> <%- include("./partials/navbar") %>
+    <%- include("./partials/scripts") %> <%= JSON.stringify(user) %> <%-
+    include("./partials/navbar") %>
   </body>
 </html>
