now done ,authentication ,authorization wala part
grfegef

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -32,7 +32,7 @@
             UserName
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">LogOut</a></li>
+            <li><a class="dropdown-item" href="/user/logout">LogOut</a></li>
           </ul>
         </li>
         <% } else { %>
